events/static/events/main.css
/* CSS variables for LIGHT MODE */
:root {
    --body-background: linear-gradient(180deg, rgba(0,105,158,1) 0%, #118ab2 30%);
    --body-bg-color: #118ab2;
    --card-bg-color: rgba(255,255,255,.7);
    --color: black;
    --event-div-bg: rgba(255,255,255,.4);
    --input-bg-color: rgba(255,255,255,.8);
    --moving-bg-color: rgba(0,0,0,.1);
    --navbar-bg-color: white;
    --section-bg-color: rgba(255,255,255,0);
    --title-bg-color: #ef476f;
    --title-color: #073b4c;
}

/* CSS variables for DARK MODE */
.dark-mode {
    --body-background: linear-gradient(180deg, #073b4c 0%, rgb(37, 37, 37) 45%);
    --body-bg-color: #073b4c;
    --card-bg-color: rgba(0,0,0,.2);
    --color: #fff;
    --event-div-bg: rgba(0,0,0,.4);
    --input-bg-color: rgba(0,0,0,.8);
    --moving-bg-color: rgba(255,255,255,.1);
    --navbar-bg-color: black;
    --section-bg-color: rgba(0,0,0,0);
    --title-bg-color: #ffd166;
    --title-color: #073b4c;
}

/*
Possible color palette
#ef476f -> pink
#ffd166 -> yellow
#06d6a0 -> green
#118ab2 -> light-blue
#073b4c -> dark-blue-greenish
*/

/* CSS animations */
@keyframes introAnimation {
    0% {
      opacity: 0;
      position: relative;
      left: -50%;
    }
    75% {
      position: relative;
      opacity: 1;
      left: 5%;
    }
    100% {
      position: relative;
      opacity: 1;
      left: 0%;
    }
}

@keyframes shakeAnimation {
    0% {left: -.5%;position:relative;}
    50% {left: .5%;position:relative;}
    100% {left: 0%;position:relative;}
}

@keyframes fadeInAnimation {
    0% {
        display: none;
        opacity: 0;
    }
    100% {
        display: block;
        opacity: 1;
    }
}

@keyframes timerAnimation {
    0% {
        transform: translateX(0%);
    }
    100% {
        transform: translateX(60%);
    }
}

nav {
    background-color: var(--navbar-bg-color);
    transition: background-color 1s ease;
}

.cursor-pointer {
    cursor: pointer;
}

.intro-animated {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-play-state: paused;
}

.entering {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-play-state: running;
}

.entering-1 {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .1s;
}

.entering-2 {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .2s;
}

.entering-3 {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .3s;
}

.entering-4 {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .4s;
}

.appearing {
    animation-name: fadeInAnimation;
    animation-duration: 1.5s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-play-state: running;
}

.appearing-1 {
    animation-name: fadeInAnimation;
    animation-duration: 1.5s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .2s;
}

.appearing-2 {
    animation-name: fadeInAnimation;
    animation-duration: 1.5s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .5s;
}

.appearing-3 {
    animation-name: fadeInAnimation;
    animation-duration: 1.5s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .8s;
}

.appearing-4 {
    animation-name: fadeInAnimation;
    animation-duration: 1.5s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: 1.1s;
}

.shaking {
    animation-name: shakeAnimation;
    animation-duration: .3s;
    animation-fill-mode: forwards;
    animation-iteration-count: 2;
    animation-play-state: running;
}

body {
    font-family: 'Poppins', sans-serif;
    color: var(--color);
    background-color: var(--body-bg-color);
    background: var(--body-background);
    background-repeat: no-repeat;
    background-size: cover;
    padding: .5em;
    min-height: 100vh;
    transition: background-color 2s ease;
    overflow-x: hidden;
}

.title-section {
    position:relative;
    margin-bottom: 2rem;
    color: var(--title-color);
}

.title-section::before {
    content: "";
    position: absolute;
    width: 200%;
    height: 120%;
    top: -10%;
    left: -50%;
    z-index: -1;
    background-color: var(--title-bg-color);
    transition: .5s ease-in;
    border-radius: .5rem;
}

.card-footer {
    color: var(--title-bg-color);
    user-select: none;
}

.loading-overlay{
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 100;
    left: 0;
    top: 0;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.8);
    overflow-x: hidden;
    transition: 0.5s;
  }
  
  .overlay-content {
    position: relative;
    top: 25%;
    text-align: center;
    margin-top: 30px;
  }

.section {
    background-color: var(--section-bg-color);
    margin-bottom: 1em;
    min-height: 30em;
    word-wrap: break-word;
}

input, .form-control, input:focus, .form-control:focus {
    color: var(--color);
    border-color: transparent;
    background-color: var(--input-bg-color);
}

.modal div {
    background-color: var(--body-bg-color);
}

.event-title {
    font-size: 3.5rem;
    text-align: center;
    word-wrap: break-word;
}

.event-clock-div {
    user-select: none;
    overflow: hidden;
}

.event-clock-div::before {
    content: "";
    position: absolute;
    width: 250%;
    height: 150%;
    top: -25%;
    left: -150%;
    z-index: -1;
    background: linear-gradient(90deg, var(--event-div-bg), var(--event-div-bg) 45%, var(--moving-bg-color) 50%, var(--event-div-bg) 55%, var(--event-div-bg));
    animation-name: timerAnimation;
    animation-duration: 3s;
    animation-fill-mode:forwards;
    animation-direction:normal;
    animation-iteration-count: infinite;
    animation-play-state: running;
    animation-timing-function: linear;
}

.event-tot-div {
    background-color: var(--event-div-bg);
}

.event-info-div {
    background-color: var(--event-div-bg);
}

.event-chart-div {
    background-color: var(--event-div-bg);
}

.card {
    background-color: var(--card-bg-color);
}

